# color4

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  benchmark.cc
docs/: design.pptx  docs.tex  refs.bib
plot/: fp.gp  load-12-4.txt  load.gp
src/: bit_table.h  bit_table_test.cc  bloom_filter.h  bloom_filter_test.cc  cuckoo_filter.h  cuckoo_filter_test.cc  hash.h  utils.h  yeah_filter.h
